Table style changes

--- a/indesk1.html
+++ b/indesk1.html
@@ -3,53 +3,49 @@
 <head>
     <title>Page Title</title>
     <link rel="stylesheet" href="indesk2.css"/>
-</head>
+</head>*
+
+*06**
 <body>
 <h1>Heey 👋🏻</h1>
 <p>Now we can type some paraghraph!</p>
+<!--<dialog open>this is an open dialog window</dialog>-->
 <table border="1">
     <thead>
         <caption>Registration form</caption>
     <tr>
-        <th>Name</th>
-        <th>email</th>
-        <th>Age</th>
-        <th>Date of registration</th>
+        <th scope="col">Name</th>
+        <th scope="col">email</th>
+        <th scope="col">Age</th>
+        <th scope="col">Date of registration</th>
     </tr>
     </thead>
     <tbody>
         <tr>
             <td>Milad</td>
             <td>Milad@gmail</td>
-            <td>21</td>
-            <td>1404/5/26</td>
+            <td id="age-color1">21</td>
+            <td id="margin">1404/5/26</td>
         </tr>
-    </tbody>
-    <thead>
         <tr>
             <td>Amir</td>
             <td>Amir@gmail</td>
-            <td>25</td>
+            <td id="age-color2">25</td>
             <td>1404/2/20</td>
         </tr>
-    </thead>
-    <tbody>
         <tr>
             <td>Ali</td>
             <td>Ali@gmail</td>
-            <td>15</td>
+            <td id="age-color3">15</td>
             <td>1404/3/2</td>
         </tr>
-    </tbody>
-    <thead>
         <tr>
             <td>Iman</td>
             <td>Iman@gmail</td>
-            <td>30</td>
+            <td id="age-color4">30</td>
             <td>1404/1/1</td>
         </tr>
-    </thead>
+    </tbody>
 </table>
-
 </body>
 </html>
