Add button and input

--- a/Song table/indesk1.html
+++ b/Song table/indesk1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="indesk2.css"/>
+    <script type="text/javascript" src="javaS.js"></script>
 </head>
 <body id="dat"> 
   
@@ -18,7 +19,10 @@
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRfUZToeAZBxZmsyjHDOEjdf01PToJPV21fVg&s" class="imgae">
   </div>
   <table border="1" class="music-table">
-  <caption>🎧 لیست آهنگ‌ها</caption>
+  <caption class="captionstayle">🎧 لیست آهنگ‌ها</caption>
+  <!-- <p style="margin-top: 50px; border: 2px solid green; padding: 0 10px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse veniam fuga veritatis cupiditate, rem cumque officiis repudiandae nihil sed eum sapiente eos soluta molestiae odit hic quo beatae sequi temporibus?</p> -->
+  <!-- <p style="background-color: orangered; margin-top: 50px;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi, id officiis tempore nihil omnis animi ut explicabo, culpa, velit non veritatis. Reprehenderit asperiores dolor delectus numquam eveniet, necessitatibus dicta molestias!</p>  -->
+  <!-- <p style="width: 200px; padding: 0 10px;">test1 test2 test3 test4 test5 test6</p> -->
   <caption></caption>
   <tr>
     <th>نام خواننده</th>
@@ -64,5 +68,10 @@
     </td>
   </tr>
 </table>
-</body>
-</html>
+<!-- <h1 id="h12">: خواننده ی مورد علاقع تو به جدول اضافه کن </h1> -->
+<input class="input2" type="text" placeholder="نام اهنگ ">
+<input class="input" type="text" placeholder="نام خواننده">
+<button>اضافه کن +</button>
+
+
+</html>     
